; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/intel/atom/extr_sst-mfld-platform-compress.c_sst_platform_compr_ack.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/intel/atom/extr_sst-mfld-platform-compress.c_sst_platform_compr_ack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.snd_compr_stream = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.sst_runtime_stream* }
%struct.sst_runtime_stream = type { i64, i32, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 (i32, i32, i64)* }

@sst = common dso_local global %struct.TYPE_6__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_compr_stream*, i64)* @sst_platform_compr_ack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sst_platform_compr_ack(%struct.snd_compr_stream* %0, i64 %1) #0 {
  %3 = alloca %struct.snd_compr_stream*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.sst_runtime_stream*, align 8
  store %struct.snd_compr_stream* %0, %struct.snd_compr_stream** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.snd_compr_stream*, %struct.snd_compr_stream** %3, align 8
  %7 = getelementptr inbounds %struct.snd_compr_stream, %struct.snd_compr_stream* %6, i32 0, i32 0
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct.sst_runtime_stream*, %struct.sst_runtime_stream** %9, align 8
  store %struct.sst_runtime_stream* %10, %struct.sst_runtime_stream** %5, align 8
  %11 = load %struct.sst_runtime_stream*, %struct.sst_runtime_stream** %5, align 8
  %12 = getelementptr inbounds %struct.sst_runtime_stream, %struct.sst_runtime_stream* %11, i32 0, i32 2
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load i32 (i32, i32, i64)*, i32 (i32, i32, i64)** %14, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** @sst, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.sst_runtime_stream*, %struct.sst_runtime_stream** %5, align 8
  %20 = getelementptr inbounds %struct.sst_runtime_stream, %struct.sst_runtime_stream* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = load i64, i64* %4, align 8
  %23 = call i32 %15(i32 %18, i32 %21, i64 %22)
  %24 = load i64, i64* %4, align 8
  %25 = load %struct.sst_runtime_stream*, %struct.sst_runtime_stream** %5, align 8
  %26 = getelementptr inbounds %struct.sst_runtime_stream, %struct.sst_runtime_stream* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = add i64 %27, %24
  store i64 %28, i64* %26, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
